--- a/library-frontend/package.json
+++ b/library-frontend/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.12.3",
+    "bootstrap": "^5.3.3",
+    "graphql": "^16.9.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-bootstrap": "^2.10.6",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.0.2",
+    "sass": "1.82.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.1",
@@ -21,6 +27,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "sass-embedded": "^1.82.0",
     "vite": "^6.0.3"
   }
 }
