--- a/library-frontend/package.json
+++ b/library-frontend/package.json
@@ -15,6 +15,7 @@
     "graphql": "^16.9.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.6",
+    "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
     "sass": "1.82.0"
