--- a/library-backend/package.json
+++ b/library-backend/package.json
@@ -20,13 +20,18 @@
   "homepage": "https://github.com/MikkoKirkanen/fullstackopen-part8#readme",
   "dependencies": {
     "@apollo/server": "^4.11.2",
+    "@graphql-tools/schema": "^10.0.13",
+    "dataloader": "^2.2.3",
     "dotenv": "^16.4.7",
-    "graphql": "^16.9.0",
+    "graphql": "^16.10.0",
+    "graphql-subscriptions": "^3.0.0",
     "graphql-tag": "^2.12.6",
+    "graphql-ws": "^5.16.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.4",
+    "mongoose": "^8.9.1",
     "mongoose-unique-validator": "^4.0.1",
-    "nodemon": "^3.1.7",
-    "uuid": "^11.0.3"
+    "nodemon": "^3.1.9",
+    "uuid": "^11.0.3",
+    "ws": "^8.18.0"
   }
 }
