--- a/library-frontend/package.json
+++ b/library-frontend/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.12.3",
     "bootstrap": "^5.3.3",
     "graphql": "^16.9.0",
+    "graphql-ws": "^5.16.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.6",
     "react-bootstrap-icons": "^1.11.5",
